2013-08-28	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* exult.cc: Fixed SetIcon (mostly...) for SDL2 for non-OSX platforms
	* sdl-compat.h: Added SDL2 define for SDL_UpdateRect; Added SDL2_INITIAL_FILL for background color
	* imagewin/scale_point.cc: Removed many ifdefs for UpdateRect SDL2
	* imagewin/imagewin.cc: Fixed errors with creating windows, textures, and surfaces for SDL2 in some cases; Changed initial SDL2 color fill to SDL2_INITIAL_FILL

2013-08-27	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* sdl-compat.h, imagewin/imagewin.cc, imagewin/imagewin.h: Some SDL2 fixes ... no longer crashes EVERY time.  If you disable scaling entirely, it will actually show SOME output.

2013-08-26	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* sdl-compat.h, imagewin/imagewin.h, imagewin/imagewin.cc, gamemgr/bggame.cc, gamemgr/sigame.cc, imagewin/scale_gl.cc, imagewin/scale_point.cc, exult.cc, audio/midi_drivers/LowLevelMidiDriver.cpp, game.cc, gumps/Gump_manager.cc, gumps/Notebook_gump.cc, drag.cc, gamewin.cc, mouse.cc, keys.cc, txtscroll.cc: Working on SDL2 code -- compiles but does not work! (does not affect existing pre-SDL2, or should not anyway)

2013-08-25	Malignant Manor <malignantmanor@users.sourceforge.net>
	* gamemgr/sigame.cc: Add missing SDL 1.3 code change to SI_Game::new_game

2013-08-25	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* audio/midi_drivers/XMidiFile.cpp: Fixed issue where iOS would not compile when doing armv7

2013-08-24	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* Info-ios.plist.in: Added for iOS Info.plist file
	* Makefile.am: Modified to include Info-ios.plist and new target iosbundle
	* configure.ac: Updated to include Info-ios.plist

2013-08-24	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* configure.ac: Updated for newer locations of XCode installs (for iOS)
	* sdl-compat.h: Updated to handle SDL_GetKeyState for SDL 1.3 (for iOS) 