@@ -1,3 +1,6 @@
+2013-08-30	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
+	* imagewin/imagewin.cc: Applied Malignant Manor's fix for SDL2 window resizes.  Added NULL-check instead of using test variable.
+
 2013-08-28	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
 	* exult.cc: Fixed SetIcon (mostly...) for SDL2 for non-OSX platforms
 	* sdl-compat.h: Added SDL2 define for SDL_UpdateRect; Added SDL2_INITIAL_FILL for background color
